Bug 264433 - Ctrl+U marks as unread all mails, instead of just one, like it used to
Summary: Ctrl+U marks as unread all mails, instead of just one, like it used to
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: 2.0.89
Platform: Unlisted Binaries Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-27 10:55 UTC by Riccardo Iaconelli
Modified: 2011-04-08 00:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Riccardo Iaconelli 2011-01-27 10:55:35 UTC
Version:           2.0.89 (using KDE 4.6.0) 
OS:                Linux

Ctrl+U is a shortcut i was used to type, to mark one email as unread.
In KMail beta, that shortcut has been reassigned to "Mark all as unread".

Thus, I just marked my whole inbox as unread, which is over 3000 messages.
I think this is very bad, also because there is no "Undo" (Edit->undo is grayed out), and the action becomes very destructive.

This bug causes data loss and it's an enormous behiavour change for all the users.

Reproducible: Always




OS: Linux (x86_64) release 2.6.35.10-74.fc14.x86_64
Compiler: gcc
Comment 1 Sergio Martins 2011-04-01 02:05:18 UTC
Git commit f1c44b03a76d44848d708653190abd173e326edc by Sergio Martins.
Committed on 01/04/2011 at 03:06.
Pushed by smartins into branch 'master'.

Ctrl+U should mark only one e-mail as unread, not all.

BUG: 264433
CCMAIL: montel@kde.org

M  +1    -1    akonadi/kmime/standardmailactionmanager.cpp     

http://commits.kde.org/kdepimlibs/f1c44b03a76d44848d708653190abd173e326edc
Comment 2 Sergio Martins 2011-04-08 00:59:58 UTC
Git commit daa1aefc0dd5f3f343483bb99aba92e70c752a88 by Sergio Martins.
Committed on 01/04/2011 at 03:06.
Pushed by smartins into branch '4.6'.

Ctrl+U should mark only one e-mail as unread, not all.

BUG: 264433
(cherry picked from commit f1c44b03a76d44848d708653190abd173e326edc)

M  +1    -1    akonadi/kmime/standardmailactionmanager.cpp     

http://commits.kde.org/kdepimlibs/daa1aefc0dd5f3f343483bb99aba92e70c752a88