Ctrl+U should mark only one e-mail as unread, not all.

BUG: 264433
CCMAIL: montel@kde.org